k8s/apps/friend-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friend-app
  namespace: prodesk
spec:
  type: ClusterIP
  selector:
    app: friend-app
  ports:
  - port: 3000
    targetPort: 3000
