k8s/apps/friend-app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: friend
  namespace: prodesk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`friend.kimsijun.com`)
      kind: Rule
      services:
        - name: friend-app
          port: 3000
  tls:
    certResolver: letsencrypt
